# crf-pos-persian

./: .coverage  .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py  startup.sh  test.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  half-space-request.md  half_spcase.md
.github/workflows/: codeql-analysis.yml  deploy.yml  deploy_test.yml  lint.yml
app/: __init__.py  config.py  constants.py
app/core/: constants.py  enums.py
cfr_pos/: __init__.py  crf.py  utils.py
crf_pos/: __init__.py  api.py  crf.py  meta_tagger.py  normalizer.py  tokenizer.py  utils.py  wapiti.py
crf_pos/normalization/: __init__.py  normalizer.py  tokenizer.py
crf_pos/pos_tagger/: __init__.py  crf.py  meta_tagger.py  utils.py  wapiti.py
pos/: __init__.py  crf.py
resources/: corrections.txt
