[metadata]
name = crf_pos
version = attr: crf_pos.__version__
description = A Python package to extract part of speech from persian text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MohammadForouhesh/crf-pos-persian
author = Mohammad H. Forouhesh
author_email = Mohammadh.Forouhesh@gmail.com
keywords = NLP, POS
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    crf_pos
python_requires = >=3.7
install_requires =
    nltk>=3.6.6
    setuptools>=58.0.4
    scikit-learn>=1.0.2
    sklearn-crfsuite>=0.3.6
    requests>=2.26.0
    parsivar>=0.2.3
    libwapiti>=0.2.1
